--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Traning HTML&CSS</title>
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="assets/fontawesome-free-6.7.2-web/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -32,5 +36,74 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <div class="container">
+        <div class="content">
+          <h1>Welcome to our website!</h1>
+          <p>This is a simple HTML and CSS template.</p>
+          <button class="btn">Get Started</button>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-start">
+            <div class="footer-logo">
+              <img src="assets/img/public/logo.png" alt="logo" />
+              <a href="#">Himma Academy</a>
+            </div>
+            <p class="desc">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi
+              numquam fuga et beatae optio vel dignissimos aspernatur ducimus
+              odio ab explicabo pariatur dolores, unde autem?
+            </p>
+            <div class="social-icons">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </div>
+          <div class="footer-end">
+            <ul>
+              <li>
+                <h2>Home</h2>
+                <ul>
+                  <li><a href="#">Product</a></li>
+                  <li><a href="#">Course</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Log in</a></li>
+                </ul>
+              </li>
+              <li>
+                <h2>Course</h2>
+                <ul>
+                  <li><a href="#">HTML & CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                  <li><a href="#">Fotographer</a></li>
+                  <li><a href="#">Design Grails</a></li>
+                </ul>
+              </li>
+              <li>
+                <h2>Article</h2>
+                <ul>
+                  <li><a href="#">New</a></li>
+                  <li><a href="#">Old</a></li>
+                  <li><a href="#">Trend</a></li>
+                  <li><a href="#">Popular</a></li>
+                </ul>
+              </li>
+              <li>
+                <h2>Contact Us</h2>
+                <p>CCdoc123@gmail.com</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
